client/src/views/whamhunter/wham-hunter.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Permanent+Marker&display=swap');

@keyframes wiggle {
  0% {
    transform: rotate(0deg);
  }
  80% {
    transform: rotate(0deg);
  }
  85% {
    transform: rotate(5deg);
  }
  95% {
    transform: rotate(-5deg);
  }
  100% {
    transform: rotate(0deg);
  }
}

@keyframes shake {
  10%,
  90% {
    transform: translate3d(-1px, 0, 0);
  }
  20%,
  80% {
    transform: translate3d(2px, 0, 0);
  }
  30%,
  50%,
  70% {
    transform: translate3d(-4px, 0, 0);
  }
  40%,
  60% {
    transform: translate3d(4px, 0, 0);
  }
}

:root {
  --color-wham-blue: 0, 20, 80;
  --color-wham-red: 255, 50, 10;
  --color-wham-red-darker: 225, 25, 0;
  --color-wham-red-dark: 55, 30, 0;
  --color-wham-green: 10, 125, 0;
  --color-wham-gold: 200, 175, 100;
}

.wham-hunter {
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  height: 100vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  padding: calc(var(--spacing) * 2);
  background-color: rgb(var(--color-wham-blue));
  color: rgb(var(--color-text-light));
}

.wham-hunter .loader {
  margin-left: -16px;
  margin-right: -16px;
  padding: 24px 16px;
  border-radius: calc(var(--spacing) * 2);
  text-align: center;
  background-color: rgb(var(--color-wham-red-darker));
}

.wham-hunter header img {
  max-width: 100%;
  margin-bottom: 24px;
  margin-top: -8px;
  box-sizing: border-box;
  border-top-right-radius: calc(var(--spacing) * 2);
  border-top-left-radius: calc(var(--spacing) * 2);
  border-top: 8px solid rgb(255, 105, 180);
  border-left: 8px solid rgb(255, 105, 180);
  border-right: 8px solid rgb(255, 105, 180);
  position: relative;
}

.wham-hunter__inner {
  background-color: rgb(var(--color-wham-red));
  border-radius: calc(var(--spacing) * 2);
  padding-left: calc(var(--spacing) * 2);
  padding-right: calc(var(--spacing) * 2);
  padding-bottom: calc(var(--spacing));
  box-sizing: border-box;
  max-width: 75%;
  box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.25);
  overflow-y: scroll;
  overflow-x: hidden;
}

.wham-hunter h2 {
  text-align: center;
  color: rgb(var(--color-text-light));
  text-shadow: 0px 0px 8px rgba(var(--color-wham-red-dark), 0.5);
}

.wham-hunter__inner header {
  padding-top: calc(var(--spacing) * 2);
  padding-bottom: calc(var(--spacing) * 1);
  text-align: center;
}

.wham-hunter__inner header h1 {
  position: relative;
  margin-top: -52px;
  color: rgb(var(--color-text-light));
  font-family: 'Permanent Marker';
  font-size: 2.8rem;
  line-height: 2.2rem;
  text-shadow: 0px 0px 8px rgba(var(--color-wham-red-dark), 0.5);
  letter-spacing: 2px;
  z-index: 1;
  animation: shake 8s infinite;
}

.wham-hunter__button {
  appearance: none;
  border: none;
  font-weight: bold;
  padding: 0 16px;
  background-color: rgb(var(--color-wham-green));
  background: linear-gradient(rgb(40, 155, 30), rgb(var(--color-wham-green)));
  color: rgb(var(--color-text-light));
  border-radius: calc(var(--spacing) * 2);
  box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.25);
  font-family: 'Space Grotesk', Arial, Helvetica, sans-serif;
  font-size: var(--font-size-100);
  height: 40px;
  transition: var(--transition-100);
}

.wham-hunter__button:hover,
.wham-hunter__button:focus {
  background-color: rgb(var(--color-dark-green));
}

.wham-hunter__button--xl {
  height: 62px;
  font-size: var(--font-size-150);
}

.wham-hunter__login-form .field {
  justify-content: space-between;
  gap: var(--spacing);
  margin-top: 24px;
}

.wham-hunter input[type='text'] {
  appearance: none;
  border: none;
  border-radius: calc(var(--spacing) * 2);
  font-family: 'Space Grotesk', Arial, Helvetica, sans-serif;
  font-size: var(--font-size-90);
  height: 40px;
  padding: 0 16px;
  box-sizing: border-box;
}

.wham-hunter__select-user {
  margin-top: 24px;
  padding-top: 32px;
  text-align: center;
  border-top: 1px solid rgba(var(--color-text-light), 0.75);
}

.wham-hunter__players {
  list-style-type: none;
  margin-bottom: 16px;
}

.wham-hunter__players--scores {
  list-style-type: decimal;
}

.wham-hunter__player-name {
  appearance: none;
  border: none;
  width: 100%;
  background-color: rgb(var(--color-wham-gold));
  font-family: 'Space Grotesk', Arial, Helvetica, sans-serif;
  font-size: var(--font-size-100);
  color: rgb(var(--color-text-light));
  border-radius: calc(var(--spacing) * 2);
  font-family: 'Space Grotesk', Arial, Helvetica, sans-serif;
  font-size: var(--font-size-90);
  font-weight: bold;
  text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
  height: 40px;
  margin-bottom: 8px;
}

@media screen and (max-width: 440px) {
  .wham-hunter {
    justify-content: flex-start;
    padding: 16px;
    height: 100%;
  }

  .wham-hunter__inner {
    max-width: none;
    box-sizing: border-box;
    height: 100%;
  }

  .wham-hunter input[type='text'] {
    margin-bottom: 2px;
  }

  .wham-hunter input[type='text'],
  .wham-hunter__button {
    box-sizing: border-box;
    width: 100%;
  }
}

.game {
  margin-left: -16px;
  margin-right: -16px;
  padding: 24px 16px;
  border-radius: calc(var(--spacing) * 2);
  text-align: center;
  background-color: rgb(var(--color-wham-red-darker));
}

.game img {
  margin-top: 16px;
  margin-bottom: -8px;
  max-width: 50%;
  animation: wiggle 2s infinite;
}

.scores {
  margin-top: 24px;
}

.scores li {
  display: flex;
  align-items: center;
  gap: 16px;
  padding-right: 48px;
  padding-top: 8px;
  padding-bottom: 8px;
  position: relative;
  border-top: 1px solid rgba(var(--color-wham-red-dark), 0.5);
}

.scores li:last-child {
  border-bottom: 1px solid rgba(var(--color-wham-red-dark), 0.5);
}

.player__name {
  font-size: var(--font-size-100);
}

.player__score {
  position: absolute;
  right: 0;
  font-weight: bold;
}

.disclaimer {
  margin: 16px 16px 0;
  text-align: center;
  opacity: 0.75;
  font-size: var(--font-size-80);
}

